--- a/sass/sections/_searchbar.sass
+++ b/sass/sections/_searchbar.sass
@@ -171,6 +171,7 @@
 
       &-visible
         max-width: 85rem
+        margin: auto
 
     &-logo
       width: 70px
